# dali

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  ci.yml
docker/: Dockerfile
docs/: TESTING.md
examples/: full.json  full.toml  minimal.json  minimal.toml
scripts/: ci.sh  e2e.py
src/: app.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  report.rs  tui.rs
src/config/: mod.rs  secret.rs  stack.rs  validate.rs
src/steps/: base.rs  bootloader.rs  fstab.rs  hardening.rs  host_pacman.rs  initramfs.rs  localization.rs  login_banner.rs  mod.rs  network.rs  partition.rs  provenance.rs  provision.rs  services.rs  shell.rs  snapshots.rs  ssh_keys.rs  storage.rs  tuning.rs  users.rs
src/system/: dry.rs  mod.rs  probe.rs  real.rs
tests/: dry_run.rs
