[package]
name = "dali"
version = "0.5.0"
edition = "2024"
rust-version = "1.85"
description = "Davlgd Arch Linux Installer — an opinionated, single-binary TUI installer for Arch Linux"
license = "Apache-2.0"
repository = "https://github.com/davlgd/dali"
readme = "README.md"
keywords = ["archlinux", "installer", "tui", "linux"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "0.9"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# DALI is a binary, not a published library: the "document every public error
# path / mark every getter #[must_use]" conventions add noise without value
# here. Proper-noun backticking (systemd-boot, NetworkManager…) likewise.
missing_errors_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
